[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/backgrounds/battleback1.png" type="Texture" id=1]
[ext_resource path="res://assets/Battlers/World01_001_GreenGoo.png" type="Texture" id=2]
[ext_resource path="res://font/NES.tres" type="DynamicFont" id=3]
[ext_resource path="res://cenas/Battle.gd" type="Script" id=4]
[ext_resource path="res://cenas/Slime.tres" type="Resource" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.305882, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.529412 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=7]
resource_name = "Enemy_damaged"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "enemy_death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 0.745098, 0, 0, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 110, -23 ), Vector2( 110, -23 ), Vector2( 110, -23 ), Vector2( 8, 22 ) ]
}

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
enemy = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -48.5
margin_right = 93.0
margin_bottom = 48.5

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 186.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Hp: 45/45"
align = 1
valign = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
margin_top = 20.0
margin_right = 186.0
margin_bottom = 84.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -108.0
custom_styles/panel = SubResource( 3 )

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 46.0
margin_right = 502.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 506.0
margin_top = 46.0
margin_right = 1008.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Hp: 25/50"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 3 )

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 338.0
margin_bottom = 108.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/icon_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "ATTACK"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 108.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/icon_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "DEFEND"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 108.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/icon_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "RUN"

[node name="TextBox" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 147.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Um GOSMENTO apareceu!!!"
align = 1
valign = 1

[node name="Ticker" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = ">"
align = 2
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enemy_damaged = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/enemy_death = SubResource( 10 )
anims/shake = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
